# Geo-fencing

./: CMakeLists.txt  README.md  kd_tree.h  main.cpp
data/toydata/: test_case_1.ans  test_case_1.in  test_case_2.ans  test_case_2.in  test_case_3.ans  test_case_3.in  test_case_4.ans  test_case_4.in  test_case_5.ans  test_case_5.in  test_case_6.ans  test_case_6.in
tools/: draw.py
yourcode/: Others.cpp  Others.h  Triangle.cpp  Triangle.h  all.cpp  all.h  kd_tree.h  polypartition.cpp  ptinpoly.cpp  ptinpoly.h  quadtrees.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-1AddPolygonBeforeQueryPoint.h  submit-2AddPointBeforeQueryPolygon.cpp  submit-2AddPointBeforeQueryPolygon.h  submit-3AddBeforeQuery.cpp  submit-3AddBeforeQuery.h  submit-4MixQueryPoint.cpp  submit-4MixQueryPoint.h  submit-5MixQueryPolygon.cpp  submit-5MixQueryPolygon.h  submit-6MixQuery.cpp  submit-6MixQuery.h
